feat(package): implement remove package
